--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -227,7 +227,7 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #333333;
-  background-color: #b0c4de;
+  background-color: rgb(225,0,0);
 }
 
 a {
